tests/fixtures/syntax/valid/file_contains_heredoc_mixed_with_ordinary_expectations.repor
case "file contains heredoc mixed with ordinary expectations" {
  write "out/result.json" ```
    hello
    ```
  $ true
  assert {
    exit 0
    file "out/result.json" contains ```
    hello
    ```
    all {
      file "out/result.json" exists
      file "out/result.json" contains ```
      hello
      ```
    }
  }
}
