tests/fixtures/syntax/invalid/file_expectation_first_form.repor
case "expectation-first file form is rejected" {
  $ true
  assert {
    file exists "out/result.json"
  }
}
